--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@
 .search_inp{
     width: 1104px;
     height: 61px;
-    border: 0;
+    border: 1px solid black;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
